# arango-vector-inspector

./: .gitignore  Cargo.toml  README.md  build.rs
src/: centroids.rs  main.rs  projection.rs  scan.rs  stats.rs  ui.rs  vpack.rs
