[package]
name = "arango-vector-inspector"
version = "0.1.0"
edition = "2024"
description = "Offline inspector for ArangoDB RocksDB vector indexes"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rocksdb = { version = "0.22", default-features = false, features = ["snappy", "lz4"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
