[package]
name = "arango-vector-inspector"
version = "0.1.0"
edition = "2024"
description = "Offline inspector for ArangoDB RocksDB vector indexes"
publish = false
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rocksdb = { version = "0.22", default-features = false, features = ["snappy", "lz4"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
faiss = "0.13"
faiss-sys = "0.7"
nalgebra = "0.33"
voronator = "0.2"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }

[profile.release]
lto = "thin"
codegen-units = 1
